# xcelform

./: README.md  license.txt  pyproject.toml
xcelform/: hooks.py  modules.txt
xcelform/public/js/: add_custom_button.js
xcelform/xcelform/doctype/xf_allowed_doctypes/: xf_allowed_doctypes.json  xf_allowed_doctypes.py
xcelform/xcelform/doctype/xf_excel_format/: test_xf_excel_format.py  xf_excel_format.js  xf_excel_format.json  xf_excel_format.py
xcelform/xcelform/doctype/xf_settings/: test_xf_settings.py  xf_settings.js  xf_settings.json  xf_settings.py
xcelform/xcelform/hooks/: get_allowed_doctypes.py  xf_excel_utils.py
