[project]
name = "xcelform"
authors = [
    { name = "Muhamed Jezlan", email = "jezlanukh@gmail.com"}
]
description = "XcelForm - A powerful app for designing and exporting customizable Excel formats in Frappe and ERPNext."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "openpyxl",
    "pandas"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
